@@ -191,6 +191,7 @@ function displayfile()
    "# <br>" +
    "# <br>" +
    "# TIMERS <br>" +
+   "#BatchStartTimeout=10 <br>" +
    "#EpilogMsgTime=2000 <br>" +
    "#GetEnvTimeout=2 <br>" +
    "#HealthCheckInterval=0 <br>" +
