@@ -59,6 +59,7 @@ enum {
 #define DEFAULT_ACCOUNTING_ENFORCE  ACCOUNTING_ENFORCE_NONE
 #define DEFAULT_ACCOUNTING_STORAGE_TYPE "accounting_storage/none"
 #define DEFAULT_AUTH_TYPE          "auth/munge"
+#define DEFAULT_BATCH_START_TIMEOUT 10
 #define DEFAULT_CACHE_GROUPS        0
 #define DEFAULT_COMPLETE_WAIT       0
 #define DEFAULT_CRYPTO_TYPE        "crypto/munge"
