@@ -95,7 +95,12 @@ int inline slurm_set_api_config(slurm_protocol_config_t * protocol_conf);
  * returns a pointer to the current slurm_protocol_config object
  * RET slurm_protocol_config_t	- current slurm_protocol_config object
  */
-inline slurm_protocol_config_t *slurm_get_api_config();
+inline slurm_protocol_config_t *slurm_get_api_config(void);
+
+/* slurm_get_batch_start_timeout
+ * RET BatchStartTimeout value from slurm.conf
+ */
+uint16_t slurm_get_batch_start_timeout(void);
 
 /* slurm_get_complete_wait
  * RET CompleteWait value from slurm.conf
